# Agentic-AI-LLM-Apps

./: .gitignore  1_Q.ipynb  1_Quickstart.ipynb  CONTRIBUTING.md  PROJECTS_INDEX.md  README.md  README.md.bak.20250910212814  requirements.txt
AI Market Sentiment Analyzer/: main.py  news_fetcher.py  tools.py
AI Product Research Agent/: config.py  main.py  tools.py
Automated Market Research Agent System/: app.py  readme.md
Comprehensive-DL-Tensorflow(Maktabkhoone)/: 27_text_classification_persian.ipynb
Data Extractor Agent/: agents.py  main.py  prompts.py  schemas.py
DeepSearch - OpenAI SDK/: agent.py
Deep_Learning_Darsman/: V42_Cifar10_Params.ipynb
Dynamic-Agent Creation & Simulation Word - AutoGen/: README.MD  agent.py  creator.py  world.py
Extractor and Summarizer Agent/: main.py  sample_input.py
Feedback Analyzer AI Agent/: README.MD
Financial Researcher - SerperAPI and OpenAI/: pyproject.toml
Image Analyzer Agent - AutoGen/: README.MD
InsightBot/: main.py  requirements.txt
Intelligent Resume Analyst/: app.py  career_advisor.py  config.py  file_processor.py  llm_clients.py  prompts.py  requirements.txt
Intelligent Task Manager/: README.MD  app.py  sample_task.json  task_agent.py
LLM-Debate-Simulator/: .env.example  README.MD  config.py  debate_simulator.py  llm_clients.py  main.py  prompts.py  requirements.txt  ui.py  utils.py
LangChain-PDFChat/: requirements.txt
Langchain Build LLM Application (Git.ir Course)/: 18_vectore_store.ipynb
Planner And Executor Agent/: client.py
Q&A & Search Tool - Multi Agent/: README.MD  main.py
Sales Email Automation - OpenAI SDK/: README.MD  app.py
Sales Email Multi-LLM Agent/: README.MD  agent.py
Shop-Smart-Assistant(OpenAI)/: README.MD  logger.py  (+2 more)
projects/assistants/TechNewsRag/: README.md  pyproject.toml  requirements.txt
projects/assistants/TechNewsRag/src/: config.py  document_loader.py  llm.py  main.py  rag.py  retriever.py  text_splitter.py  vector_store.py
projects/educationals/alice-adventures-rag-based/: README.md  __init__.py  __main__.py  pyproject.toml
projects/educationals/alice-adventures-rag-based/config/: settings.py
projects/educationals/alice-adventures-rag-based/core/: document_loader.py  llm.py  vectorstore.py
projects/educationals/alice-adventures-rag-based/data/: alice.txt
projects/multi-agent/AI Engineer Team/: README.md  pyproject.toml
projects/multi-agent/AI Engineer Team/src/eng_team/: crew.py  main.py
(+160 files in other folders)
