[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alice_rag"
version = "0.1.0"
description = "A RAG system for querying Alice in Wonderland using LangChain and FAISS"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["rag", "langchain", "faiss", "nlp"]
authors = [
    { name = "Your Name" }
]
dependencies = [
    "python-dotenv",
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-openai",
    "langchain-text-splitters",
    "langchain-huggingface",
    "faiss-cpu",
    "sentence-transformers",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "ruff>=0.0.270",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
extend-select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
]